--- a/src/app/components/Background.module.css
+++ b/src/app/components/Background.module.css
@@ -27,9 +27,7 @@
     top: -50%;
     left: 0;
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(235, 78, 78, 0.5) 75%, rgba(235, 78, 78, 0.5) 100%) !important;
-    animation: drop 5s 0s infinite;
-    animation-fill-mode: forwards;
-    animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
+    animation: 5s cubic-bezier(0.4, 0.26, 0, 0.97) 0s infinite normal forwards running drop;
   }
   &:nth-child(1){
     margin-left: -40%;
