--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,3 +42,13 @@ a {
 ::-webkit-scrollbar-thumb:hover {
   background: #555; 
 }
+
+.section{
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 50px;
+  overflow-x: hidden;
+}
