--- a/src/app/components/Sections/components/ProjectDescription.module.css
+++ b/src/app/components/Sections/components/ProjectDescription.module.css
@@ -1,21 +1,24 @@
 .projectContainer {
     display: flex;
+    position: relative;
     flex-direction: column;
     height: 450px;
-    width: 90%;
+    width: max(90%, 800px);
 }
 
 .projectContainer.fromRight {
     border-radius: 40px 0px 0px 40px;
     background: linear-gradient(90deg, rgba(48,48,48,1) 80%, rgba(31,31,31,1) 100%);
-    padding: 30px 10% 30px 30px;
+    padding: 20px 10% 30px 20px;
     align-self: flex-end;
+    justify-self: flex-end;
 }
 
 
 .projectContainer.fromLeft {
     background: linear-gradient(90deg, rgba(31,31,31,1) 0%, rgba(48,48,48,1) 20%);
     border-radius: 0px 40px 40px 0px;
-    padding: 30px 30px 30px 10%;
+    padding: 20px 20px 30px 10%;
     align-self: flex-start;
+    justify-self: flex-start;
 }
